@@ -44,6 +44,7 @@ public:
 	int		m_DCA_to_Index[PWSprefs::maxDCA + 1];
 	CString m_csBrowser;
 	CString m_csAutotype;
+    BOOL m_minauto;
 
 // Overrides
 	// ClassWizard generate virtual function overrides
