@@ -56,7 +56,7 @@ class PWSprefs {
 		   DisplayExpandedAddEditDlg, MaintainDateTimeStamps,
 		   SavePasswordHistory, FindWraps, ShowNotesDefault,
 		   BackupBeforeEverySave, PreExpiryWarn,
-           ExplorerTypeTree, ListViewGridLines,
+           ExplorerTypeTree, ListViewGridLines, MinimizeOnAutotype,
 		   NumBoolPrefs};
   enum  IntPrefs {Column1Width, Column2Width, Column3Width, Column4Width,
 		  SortedColumn, PWLenDefault, MaxMRUItems, IdleTimeout,
