@@ -304,6 +304,7 @@
 #define IDC_COLPICK_RMTIME              1245
 #define IDC_LIST_HEADER                 1246
 #define IDC_DEFAULTAUTOTYPE             1247
+#define IDC_MINIMIZEONAUTOTYPE          1248
 
 // Next default values for new objects
 // 
@@ -311,7 +312,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        236
 #define _APS_NEXT_COMMAND_VALUE         30000
-#define _APS_NEXT_CONTROL_VALUE         1248
+#define _APS_NEXT_CONTROL_VALUE         1249
 #define _APS_NEXT_SYMED_VALUE           127
 #endif
 #endif
